# ntpclient.rs

./: Cargo.toml  Makefile
src/: main.rs  packet.rs  utils.rs
