[package]
name = "ntpclient"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]

[dependencies]
packed_struct = { version = "0.3", default-features = false, features = [] }
packed_struct_codegen = { version = "0.3", default-features = false, features = [] }
libc = { version = "0.2.42", default-features = false }

[features]
default = ["std"]
no_std = []
std = ["packed_struct/std", "packed_struct_codegen/std"]

[profile.dev]
panic = "abort"   # disabling unwinding for no_std
